package Asset;

public abstract class IntangibleAsset extends Asset {


    public IntangibleAsset(String name, int price, String color) {
        super(name, price, color);
    }
}
