package Asset;

public class Patent extends IntangibleAsset {


    public Patent(String name, int price, String color) {
        super(name, price, color);
    }
}
