@startuml
'https://plantuml.com/class-diagram

abstract class Asset {
    String name
    int price
    String color
}

interface Thing {
    double getWeight();
    void setWeight(double weight)
}

abstract class TangibleAsset{
    double weight

    double getWeight()
    void setWeight(double weight)
}

abstract class IntangibleAsset {

}

class Computer {
    String makerName

    String getMakerName()
    void setMakerName(String makerName)
}

class Book {
    String isbn

    String getIsbn()
    void setIsbn(String isbn)
}

class Patent {

}


Thing <|.. TangibleAsset

Asset <|-- TangibleAsset
Asset <|-- IntangibleAsset

TangibleAsset <|-- Computer
TangibleAsset <|-- Book

IntangibleAsset <|-- Patent


@enduml